Adds ROM loading implementation and tests
This implements the loading of ROM program data from a binary ROM file
into the program seaction of memory, [x0200, 0x1000], allow with
appropriate for error handling. This also introduces an runtime_error
structure to returned detailed error information when a problem occurs.
For example, a runtime_error is returned in the chip8_load_rom()
function  when the ROM file can not be opened, or if the data in the ROM
files is larger than the available program memory.

Additionally, the test source files where restructure to allow for a
runtime_error test suite.

src/chip8.h:
* Removes unused structure in favor of runtime_error
src/chip8.c:
* Adds function to load ROM data from a file into to program memory

test/main.c:
* Handles the creation and running of the test suite

test/chip8_test.c:
* Removes main function in favor of test/main.c

test/chip8_test.h:
* Contains exported suite creation function declaration

test/runtime_error_test.c
* Adds tests for the runtime_error structure

test/runtime_error_test.h
* Contains exported suite creation function declaration

Makefile:
* Updates the test build steps

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+# ignore object files
 *.o
+
+# ignore vim files
 *.swp
-test
+
+# ignore the executables
+tests
 chip8
+
+# ignore code coverage results files
+*.info
+*.gcno
+*.gcda
+coverage/
